RESOLVED FIXED226336
CheckedArithmetic crash: Values of keySplines control points must all be in the range 0 to 1
https://bugs.webkit.org/show_bug.cgi?id=226336
Summary CheckedArithmetic crash: Values of keySplines control points must all be in t...
Sam Sneddon [:gsnedders]
Reported 2021-05-27 09:18:18 PDT
The above WPT test crashes on load. wpt.fyi makes it look like this test has crashed for a while.
Attachments
Patch (10.10 KB, patch)
2021-05-27 12:02 PDT, Said Abou-Hallawa
sam: review+
Patch (9.29 KB, patch)
2021-05-27 17:08 PDT, Said Abou-Hallawa
ews-feeder: commit-queue-
Patch (9.36 KB, patch)
2021-05-27 20:20 PDT, Said Abou-Hallawa
no flags
Radar WebKit Bug Importer
Comment 1 2021-05-27 09:18:30 PDT
Said Abou-Hallawa
Comment 2 2021-05-27 12:02:43 PDT
EWS Watchlist
Comment 3 2021-05-27 12:03:33 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Said Abou-Hallawa
Comment 4 2021-05-27 17:08:08 PDT
EWS
Comment 5 2021-05-27 18:59:41 PDT
Tools/Scripts/svn-apply failed to apply attachment 429958 [details] to trunk. Please resolve the conflicts and upload a new patch.
Said Abou-Hallawa
Comment 6 2021-05-27 20:20:33 PDT
EWS
Comment 7 2021-05-27 21:16:26 PDT
Committed r278188 (238231@main): <https://commits.webkit.org/238231@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429977 [details].
Note You need to log in before you can comment on or make changes to this bug.