Values of keySplines control points must all be in the range 0 to 1 https://bugs.webkit.org/show_bug.cgi?id=226336

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/svg/animations/keysplines-x-limits-expected.txt:
* web-platform-tests/svg/animations/keysplines-y-limits-expected.txt: Added.
* web-platform-tests/svg/animations/keysplines-y-limits.html: Added.

Source/WebCore:

W3C specs:
        https://svgwg.org/specs/animations/#KeySplinesAttribute

MDN documenation:
        https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/keySplines

Test: imported/w3c/web-platform-tests/svg/animations/keysplines-y-limits.html

* svg/SVGAnimationElement.cpp:
(WebCore::parseKeySplines):

Source/WTF:

* wtf/MathExtras.h:
(isInRange):
There are a least couple of implementations of this function in WebCore.
The next step is to remove the redundant code in WebCore and use this one.


Canonical link: https://commits.webkit.org/238231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278188 268f45cc-cd09-0410-ab3c-d52691b4dbfc